2008-09-04  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.14.1 ===

2008-09-04  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.14.0 ===

2008-09-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkenums.h: Add nicks for the GtkNumberUpLayout values.

	* gtk/gtkprintunixdialog.c:
	* gtk/gtkprintsettings.c: Simplify the handling of GtkNumberUpLayout
	values. Followup on #535158, proposed by Christian Persch.

2008-09-04  Matthias Clasen  <mclasen@redhat.com>

	* INSTALL.in: Update required versions

2008-09-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkhandlebox.c: events return gboolean not gint.
	Change misnamed gtk_handle_box_button_changed() to
	gtk_handle_box_button_press(). Reindent static prototypes.

2008-09-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkwidget.c (gtk_widget_get_draw_rectangle): when extending
	the draw rectangle by the "draw-border" style property, subtract
	"left" from "x" and "top" from "y", not the other way around.

2008-09-03  Matthias Clasen  <mclasen@redhat.com>
	
	* gdk/gdkwindow.c:
	* gtk/gtkbindings.c:
	* gtk/gtkcolorseldialog.c: More doc fixes

	* gtk/gtktestutils.c: Fix a typo in the docs.

2008-09-03  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* configure.in: Bump version to 2.14.0

2008-09-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcolorsel.c: Set page_size to 0 for the spinbuttons
	in the color selector.

	* README.in: Add a note about the GtkAdjustment clamping change

2008-09-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 550528 - IconView DND interface does not work if only used as
	source

	* gtk/gtkiconview.c: Make source-only DND work. 
	Found by Alex Simon

2008-09-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols: Add some missing symbols

2008-09-03  Matthias Clasen  <mclasen@redhat.com>
	
	* gtk/gtkprintsettings.c: Fix order of includes to avoid unwanted
	PLT entries.
